--- a/views/create.html
+++ b/views/create.html
@@ -299,18 +299,74 @@ header button svg{
   justify-content: center;
 }
 .location_error > div{
-  background:#f34949;
-  border-radius:15px;
-  padding:15px;
-  width:70vw;
+  display: flex;
+  flex-direction: column;
+  align-items: center;  
 }
-.location_error > button{
+.location_error > div > div{
+  background:#f34949;
+  border-radius:20px;
+  padding:15px;
+  width:80vw;
+}
+.location_error > div > div > p{
+  font-size:1.1em;
+}
+.location_error > div > button{
   background:#8b5fe9;
-  border-radius: 15px;
+  border-radius: 10px;
   padding:10px 13px;
+  color:white;
+  width: fit-content;
+  margin-top:10px;
   font-family: 'Proxima';
   font-size: 1em;
   border:none;
+}
+.msg_error{
+            padding:12px 15px;
+            border-radius:12px;
+            background:white;
+            position:fixed;
+            margin: auto;
+    left: 0;
+    top:-50vh;
+    animation:fadeIn 3.8s;
+    animation-fill-mode: forwards;
+    width: fit-content;
+    right: 0;
+            display: none;
+            justify-content: space-between;
+            z-index:999;
+        }
+        .msg_error p{
+            color:black;
+            line-height: 30px;
+            margin-left:7px;    
+}
+@keyframes fadeIn{
+    0%{
+        top:-50vh;
+    }
+    8%{
+        top:19px;
+    }
+    13%{
+top:12px;
+    }
+    85%{
+top:12px;
+    }
+    90%{
+        top:19px;
+    }
+    100%{
+        top:-50vh;
+    }
+}
+.msg_error svg{
+    width:30px;
+    height:30px;
 }
 @media(max-width:480px){
     .mode{
@@ -334,14 +390,14 @@ header button svg{
     </style>
 </head>
 <body>
-  <div class="location_error">
-    <div></div>
-  </div>
+  <div class="location_error"></div>
+  <div class="msg_error"><svg xmlns="http://www.w3.org/2000/svg" enable-background="new 0 0 24 24" viewBox="0 0 24 24"><path fill="#f34949" d="M20,6H4C2.9,6,2,6.9,2,8v8c0,1.1,0.9,2,2,2h16c1.1,0,2-0.9,2-2V8C22,6.9,21.1,6,20,6z M10,9c0.6,0,1,0.4,1,1s-0.4,1-1,1s-1-0.4-1-1S9.4,9,10,9z M6,15c-0.6,0-1-0.4-1-1s0.4-1,1-1s1,0.4,1,1S6.6,15,6,15z M6,11c-0.6,0-1-0.4-1-1s0.4-1,1-1s1,0.4,1,1S6.6,11,6,11z M14,15h-4c-0.6,0-1-0.4-1-1s0.4-1,1-1h4c0.6,0,1,0.4,1,1S14.6,15,14,15z M14,11c-0.6,0-1-0.4-1-1s0.4-1,1-1s1,0.4,1,1S14.6,11,14,11z M18,15c-0.6,0-1-0.4-1-1s0.4-1,1-1s1,0.4,1,1S18.6,15,18,15z M18,11c-0.6,0-1-0.4-1-1s0.4-1,1-1s1,0.4,1,1S18.6,11,18,11z"/></svg><p></p></div>
+    
   <header>
     <a href="/"><button><svg xmlns="http://www.w3.org/2000/svg" enable-background="new 0 0 24 24" viewBox="0 0 24 24"><path fill="white" d="M17,10.9L17,10.9l-7.6,0l3.3-3.3c0.4-0.4,0.4-1,0-1.4c-0.4-0.4-1-0.4-1.4,0l-5,5c-0.4,0.4-0.4,1,0,1.4c0,0,0,0,0,0l5,5c0.4,0.4,1,0.4,1.4,0c0.4-0.4,0.4-1,0-1.4l-3.3-3.3H17c0.6,0,1-0.4,1-1C18,11.4,17.6,10.9,17,10.9z"/></svg></button></a>
     <div class="categories"><a style="background:#1bb865" href="#link_main">Основное</a><a style="background:#5865e0" href="#map">Карта</a></div>    
   </header>
-  <p class="category" id="link_main" style="background:#1bb865;">Основное</p>
+  <p class="category" id="link_main" style="background:#1bb865;margin-top:5px">Основное</p>
      <input type="text" style="margin-top:0;" class ="basic_input enter_name" placeholder="Ваше имя">
         <p>Код комнаты:</p>
         <p class="room_code"></p>
@@ -446,16 +502,15 @@ new Promise((resolve, reject) => {
           }, 500);
               },
               function(err){
-                console.log('hjkl')
+                location_err_window.style.display = 'flex';
+                document.body.style.overflow = 'hidden';
                 if(err.code == 1){
-                  location_err_window.style.display = 'flex';
+                  
                   location_err_window.innerHTML = '<div><p>Дайте сайту доступ к геолокации и включите GPS. Затем перезагрузите страницу.</p></div><button>Перезагрузить</button>'
                 }
-                else if(err.code == 3){
-
-                }
                 else{
-                  alert('ghjkl')
+                  location_err_window.innerHTML = '<div><p>Неизвестная ошибка.</p></div><button>Перезагрузить</button>'
+              
                 }
               },
               gpsOptions
@@ -591,9 +646,11 @@ map.getSource('zone').setData(zone)
 const sendingName = document.querySelector('.enter_name');
 const sendingCount = document.querySelector('.players_count');
 const sendingMode = document.querySelector('input[name="mode"]');
+const msg_error = document.querySelector('.msg_error');
 document.querySelector('.create_room').onclick = ()=>{
     if(sendingCount.value == '' || sendingMode.value == '' || sendingName.value == ''){
-        alert('Ошибка')
+      msg_error.querySelector('p').innerText = 'Введите всё.';
+    msg_error.style.display = 'flex';
     }
     else{
         location.href = '/room?roomId=' + roomCode + '&name=' + sendingName.value + '&mode=' + sendingMode.value + '&count=' +sendingCount.value;
