--- a/views/room.html
+++ b/views/room.html
@@ -3,6 +3,8 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    
+<link rel="shortcut icon" type="image/png" href="./logo.png">
     <script src="./qrcode.js"></script>
     <title>Участников:</title>
     <style>
@@ -26,7 +28,7 @@
             outline:none;
         }
         h1,h2,h3,h4,h5{
-            font-family:'ProximaD';
+            font-family:'Montserrat';
         }
         p{
             margin:0;
@@ -81,6 +83,7 @@
         .startgame button svg{
             vertical-align: -0.5em;
             margin-left:3px;
+            margin-right:-2px;
         }
         
         .countdown{
@@ -207,6 +210,36 @@ margin-left:2px;
     height:40px;
     margin-left:0.5px;
 }
+.information{
+    margin-left:5vw;
+    margin-top:15px;
+}
+.information p{
+    font-size:1.1em;
+    color:#6d6df5;
+}
+.information p:first-of-type{
+    color:black;
+}
+.information span{
+    color:black;
+}
+.information button{
+    border:none;
+    background:#7373ea;
+    border-radius:50px;
+    padding:6px;
+    width:32px;
+    height:32px;
+    vertical-align: -0.3em;
+    margin-left:6px;
+}
+.information button svg{
+width:20px;
+height:20px;
+color:white;
+margin-right: -1px;
+}
         </style>
 </head>
 <body>
@@ -229,10 +262,11 @@ margin-left:2px;
     
     <p class="countdown">Ждём всех...</p>
     <div class="startgame"></div>
-    <p class="username"></p>
-    <p class="nosuchroom"></p>
-    <p data-option="mode"></p>
-    <div class="users"></div>
+    <div class="information"><p style="font-size:1.4em;font-family:'Montserrat'">Информация:</p>
+    <p>Код комнаты:&nbsp;<span data-option="roomcode"></span><button onclick="copyCode()"><svg xmlns="http://www.w3.org/2000/svg" enable-background="new 0 0 24 24" viewBox="0 0 24 24"><path fill="white" d="M16,8h4.4L15,2.6V7C15,7.6,15.4,8,16,8z M16,10c-1.7,0-3-1.3-3-3V2h-3C8.3,2,7,3.3,7,5v1H6C4.3,6,3,7.3,3,9v10c0,1.7,1.3,3,3,3h8c1.7,0,3-1.3,3-3v-1h1c1.7,0,3-1.3,3-3v-5H16z M15,19c0,0.6-0.4,1-1,1H6c-0.6,0-1-0.4-1-1V9c0-0.6,0.4-1,1-1h1v7c0,1.7,1.3,3,3,3h5V19z"/></svg></button></p>
+    <p>Ваше имя:&nbsp;<span data-option="username"></span></p>
+    <p>Режим: <span data-option="mode"></span></p></div>
+    <div style="display:none" class="users"></div>
 
             <div class="qr_btn_container"><button>Показать QR<svg xmlns="http://www.w3.org/2000/svg" enable-background="new 0 0 24 24" viewBox="0 0 24 24"><path fill="white" d="M8,21H4c-0.6,0-1-0.4-1-1v-4c0-0.6-0.4-1-1-1s-1,0.4-1,1v4c0,1.7,1.3,3,3,3h4c0.6,0,1-0.4,1-1S8.6,21,8,21z M22,15c-0.6,0-1,0.4-1,1v4c0,0.6-0.4,1-1,1h-4c-0.6,0-1,0.4-1,1s0.4,1,1,1h4c1.7,0,3-1.3,3-3v-4C23,15.4,22.6,15,22,15z M20,1h-4c-0.6,0-1,0.4-1,1s0.4,1,1,1h4c0.6,0,1,0.4,1,1v4c0,0.6,0.4,1,1,1h0c0.6,0,1-0.4,1-1V4C23,2.3,21.7,1,20,1z M2,9L2,9c0.6,0,1-0.4,1-1V4c0-0.6,0.4-1,1-1h4c0.6,0,1-0.4,1-1S8.6,1,8,1H4C2.3,1,1,2.3,1,4v4C1,8.6,1.4,9,2,9z M10,5H6C5.4,5,5,5.4,5,6v4c0,0.6,0.4,1,1,1h4c0.6,0,1-0.4,1-1V6C11,5.4,10.6,5,10,5z M14,11h4c0.6,0,1-0.4,1-1V6c0-0.6-0.4-1-1-1h-4c-0.6,0-1,0.4-1,1v4C13,10.6,13.4,11,14,11z M10,13H6c-0.6,0-1,0.4-1,1v4c0,0.6,0.4,1,1,1h4c0.6,0,1-0.4,1-1v-4C11,13.4,10.6,13,10,13z M14,16L14,16c0.6,0,1-0.4,1-1c0.6,0,1-0.4,1-1s-0.4-1-1-1h-1c-0.6,0-1,0.4-1,1v1C13,15.6,13.4,16,14,16z M18,13c-0.6,0-1,0.4-1,1v3c-0.6,0-1,0.4-1,1s0.4,1,1,1h1c0.6,0,1-0.4,1-1v-4C19,13.4,18.6,13,18,13z M14,17c-0.6,0-1,0.4-1,1s0.4,1,1,1s1-0.4,1-1S14.6,17,14,17z"/></svg></button></div>
     <script src="/socket.io/socket.io.js"></script>
@@ -241,6 +275,7 @@ margin-left:2px;
 function hasNumbers(string) {
   return /\d/.test(string);
 }
+
         function getParam(parameter) {
     let result = null,
         tmp = [], found = false;
@@ -270,6 +305,17 @@ const player = {
     isCreator:false
 }
 const roomId = getParam('roomId');
+const copyCode = () => {
+  const el = document.createElement('textarea');
+  el.value = roomId;
+  el.setAttribute('readonly', '');
+  el.style.position = 'absolute';
+  el.style.left = '-9999px';
+  document.body.appendChild(el);
+  el.select();
+  document.execCommand('copy');
+  document.body.removeChild(el);
+};
 if(!hasNumbers(roomId) && roomId.length == 6){
 if(getParam('mode') !== false){
     socket.emit('join room',{roomId: roomId,username:player.name,gameOptions:{mode:getParam('mode'),count:getParam('count')}});
@@ -277,16 +323,12 @@ if(getParam('mode') !== false){
 else{
 socket.emit('join room',{roomId: roomId,username:player.name});
 }
-    document.querySelector('.username').innerText = player.name;
-socket.on('room not exists',(data)=>{
-    if(data){
-    location.href = '/'
-    }
-})
+    document.querySelector('span[data-option="username"]').innerText = player.name;
 socket.on('redirect',(data)=>{
     location.href = '/?error';
 })
 
+let playersCount = 1;
 socket.on('get id',data => {
     player.socketId = data;
 })
@@ -296,7 +338,11 @@ socket.on('get permissions',data => {
     document.querySelector('.startgame').innerHTML = `<p>или</p><button><span style="padding-top: 3px;">Начать сейчас</span><svg xmlns="http://www.w3.org/2000/svg" enable-background="new 0 0 24 24" viewBox="0 0 24 24"><path fill="white" d="M18.5,9L8.9,3.5C8.4,3.2,7.8,3,7.2,3C5.3,3,3.8,4.5,3.8,6.4v11.2c0,1.9,1.5,3.4,3.4,3.4c0.6,0,1.2-0.2,1.7-0.5l9.7-5.6c0.5-0.3,0.9-0.7,1.2-1.2C20.7,12.1,20.2,10,18.5,9z"/></svg></button>`;
     document.querySelector('.header_icons').innerHTML = `<li><svg xmlns="http://www.w3.org/2000/svg" enable-background="new 0 0 24 24" viewBox="0 0 24 24"><path fill="white" d="M20.3,12.7c-0.3-0.4-0.3-0.9,0-1.3l1.3-1.4c0.3-0.3,0.3-0.8,0.1-1.2l-2-3.5c-0.2-0.4-0.6-0.6-1.1-0.5l-1.9,0.4c-0.5,0.1-1-0.2-1.1-0.7l-0.6-1.8C14.8,2.3,14.4,2,14,2h-4C9.6,2,9.2,2.3,9.1,2.7L8.4,4.5C8.3,5,7.8,5.3,7.3,5.2L5.4,4.8C5,4.7,4.6,4.9,4.3,5.3l-2,3.5C2.1,9.1,2.2,9.6,2.5,9.9l1.3,1.4c0.3,0.4,0.3,0.9,0,1.3l-1.3,1.4c-0.3,0.3-0.3,0.8-0.1,1.2l2,3.5c0.2,0.4,0.6,0.6,1.1,0.5l1.9-0.4c0.5-0.1,1,0.2,1.1,0.7l0.6,1.8C9.2,21.7,9.6,22,10,22h4c0.4,0,0.8-0.3,0.9-0.7l0.6-1.8c0.2-0.5,0.7-0.8,1.1-0.7l1.9,0.4c0.4,0.1,0.9-0.1,1.1-0.5l2-3.5c0.2-0.4,0.2-0.8-0.1-1.2L20.3,12.7z M12,15c-1.7,0-3-1.3-3-3s1.3-3,3-3s3,1.3,3,3S13.7,15,12,15z"/></svg></li><li data-option="deleteroom"><svg xmlns="http://www.w3.org/2000/svg" style="background:#f34949" enable-background="new 0 0 24 24" viewBox="0 0 24 24"><path fill="white" d="M20,6h-4V5c0-1.7-1.3-3-3-3h-2C9.3,2,8,3.3,8,5v1H4C3.4,6,3,6.4,3,7s0.4,1,1,1h1v11c0,1.7,1.3,3,3,3h8c1.7,0,3-1.3,3-3V8h1c0.6,0,1-0.4,1-1S20.6,6,20,6z M10,5c0-0.6,0.4-1,1-1h2c0.6,0,1,0.4,1,1v1h-4V5z M11,17c0,0.6-0.4,1-1,1s-1-0.4-1-1v-6c0-0.6,0.4-1,1-1s1,0.4,1,1V17z M15,17c0,0.6-0.4,1-1,1s-1-0.4-1-1v-6c0-0.6,0.4-1,1-1s1,0.4,1,1V17z"></path></svg></li><a href="/"><li><svg xmlns="http://www.w3.org/2000/svg" enable-background="new 0 0 24 24" viewBox="0 0 24 24"><path fill="white" d="M13.8,15.3c0.4,0.4,0.4,1,0,1.4c-0.4,0.4-1,0.4-1.4,0c0,0,0,0,0,0l-4-4c-0.4-0.4-0.4-1,0-1.4c0,0,0,0,0,0l4-4c0.4-0.4,1-0.4,1.4,0c0.4,0.4,0.4,1,0,1.4L11.5,11H22c-0.6-5.5-5.5-9.5-10.9-8.9C5.6,2.6,1.5,7.5,2.1,13c0.6,5.5,5.5,9.5,10.9,8.9c4.7-0.5,8.5-4.2,8.9-8.9H11.5L13.8,15.3z"></path></svg></li></a>`;
         document.querySelector('.startgame button').onclick = ()=>{
+            console.log(playersCount)
+            if(playersCount > 1){
+                
             socket.emit('start game',{id:player.socketId,room:roomId});
+            }
         }
         document.querySelector('li[data-option="deleteroom"]').onclick = ()=>{
             console.log('qew')
@@ -327,17 +373,19 @@ socket.on('roomOptions',(data)=>{
         default:
             curMode = 'Ошибка!';
     }
-document.querySelector('p[data-option="mode"]').innerText = curMode;
+document.querySelector('span[data-option="mode"]').innerText = curMode;
 document.querySelector('span[data-option="playersCount2"]').innerText = data.playersMax;
 playersMaxCount = data.playersCount;
 })
+document.querySelector('span[data-option="roomcode"]').innerText = roomId;
 socket.on('roomUsers',(data)=>{
     document.querySelector('.users').innerHTML = '';
     let ul = document.createElement('ul');
     console.log(data);
-    
+    playersCount = 0;
 document.querySelector('span[data-option="playersCount1"]').innerText = data.length;
     data.forEach((user)=>{
+        playersCount++;
         let username = user;
         let item = document.createElement('li');
         item.innerText = username;
@@ -347,6 +395,7 @@ document.querySelector('span[data-option="playersCount1"]').innerText = data.len
     
     socket.on('user left',data => {
         alert(`${data} вышел`);
+        playersCount--;
     })
     socket.on('preparing game',data => {
         if(data){
