--- a/views/home.html
+++ b/views/home.html
@@ -160,7 +160,7 @@ bottom:0;
 padding-bottom:15px;
 z-index:3;
 opacity:0;
-transition:transform .45s, opacity .8s;
+transition:transform .45s, opacity .8s, width 1s;
 }
 
 .qr_camera.shown{
@@ -249,6 +249,39 @@ margin-left:2px;
     margin-top: 10px;
     color: white;
     font-family: 'Proxima';
+    
+}
+@keyframes qr1{
+    0%{
+        opacity:1;
+        height: fit-content;
+    }
+    100%{
+        opacity:0;
+        height: 0;
+    }
+}
+@keyframes qr2{
+    0%{
+        opacity:0;
+        height: 0;
+    }
+    100%{
+        opacity:1;
+        height: fit-content;
+    }
+}
+.qr_content2{
+    height: 0;
+    z-index: 5;
+}
+.qr_content1{
+    z-index: 4;
+    height: fit-content;
+}
+.qr_content1, .qr_content2{
+    overflow: hidden;
+    animation-fill-mode: forwards!important;
 }
     </style>
     
@@ -256,10 +289,12 @@ margin-left:2px;
 <body>
     <div class="qr_bg"></div>
     <div class="qr_camera">
-        
+        <div class="qr_content1">
        <div class="qr_preview_c"> <video id="qr_preview" autoplay="autoplay" class="active" style="transform: scaleX(-1);"></video></div>
        <div class="qr_close"><button>Закрыть<svg aria-hidden="true" focusable="false" data-prefix="fas" data-icon="times" role="img" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 352 512" class="svg-inline--fa fa-times fa-w-11 fa-3x"><path fill="currentColor" d="M242.72 256l100.07-100.07c12.28-12.28 12.28-32.19 0-44.48l-22.24-22.24c-12.28-12.28-32.19-12.28-44.48 0L176 189.28 75.93 89.21c-12.28-12.28-32.19-12.28-44.48 0L9.21 111.45c-12.28 12.28-12.28 32.19 0 44.48L109.28 256 9.21 356.07c-12.28 12.28-12.28 32.19 0 44.48l22.24 22.24c12.28 12.28 32.2 12.28 44.48 0L176 322.72l100.07 100.07c12.28 12.28 32.2 12.28 44.48 0l22.24-22.24c12.28-12.28 12.28-32.19 0-44.48L242.72 256z" class=""></path></svg></button></div>
     </div>
+    <div class="qr_content2"><p style="color:black;font-size:1.25em">Введите имя:</p><input type="text" class="basic_input" placeholder="Введите имя..."><button class="basic_button">Войти</button></div>
+</div>
     <div class="msg_error"><svg xmlns="http://www.w3.org/2000/svg" enable-background="new 0 0 24 24" viewBox="0 0 24 24"><path fill="#F34949" d="M21.7,7.6l-5.3-5.3C16.2,2.1,16,2,15.7,2H8.3C8,2,7.8,2.1,7.6,2.3L2.3,7.6C2.1,7.8,2,8,2,8.3v7.5c0,0.3,0.1,0.5,0.3,0.7l5.3,5.3C7.8,21.9,8,22,8.3,22h7.5c0.3,0,0.5-0.1,0.7-0.3l5.3-5.3c0.2-0.2,0.3-0.4,0.3-0.7V8.3C22,8,21.9,7.8,21.7,7.6z M12,17c-0.6,0-1-0.4-1-1s0.4-1,1-1s1,0.4,1,1S12.6,17,12,17z M13,12c0,0.6-0.4,1-1,1s-1-0.4-1-1V8c0-0.6,0.4-1,1-1s1,0.4,1,1V12z"/></svg><p></p></div>
     <div class="room_form">
     <input type="text" name="username" placeholder="Ваше имя">
@@ -344,14 +379,15 @@ document.querySelector('.nameexists').innerText = 'Ошибка имени.';
     QrScanner.WORKER_PATH = 'node_modules/qr-scanner/qr-scanner-worker.min.js';
     document.querySelector('#qr_preview').addEventListener("change",function(){alert('changed')});
    const qr = new QrScanner(document.querySelector('#qr_preview'), function(result){
-       if(result.length == 6 && result == result.toUpperCase() && !/\d/.test(result)){
-qrElem1.innerHTML = '<p style="color:black;font-size:1.25em">Введите имя:</p><input type="text" class="basic_input" placeholder="Введите имя..."><button class="basic_button">Войти</button>'
+       //if(result.length == 6 && result == result.toUpperCase() && !/\d/.test(result)){
+qrElem1.querySelector('.qr_content1').style.animation = 'qr1 1s';
+qrElem1.querySelector('.qr_content2').style.animation = 'qr2 1s';
        qrElem1.style.padding = '20px 30px';
        document.querySelector('.basic_button').onclick = function(){
            let value  = document.querySelector('.basic_input').value;
            location.href = `/room?roomId=${result}&name=${value}`
        }
-}
+//}
     });
     
     qr.start();
