--- a/views/room.html
+++ b/views/room.html
@@ -414,7 +414,7 @@ socket.on('roomOptions',(data)=>{
             curMode = 'Точка взлёта';
             break;
         case 'knocker':
-            curMode = 'Тук-тук!'
+            curMode = 'Фронт-ин'
             break;
         default:
             curMode = 'Ошибка!';
