--- a/views/room.html
+++ b/views/room.html
@@ -316,6 +316,8 @@ top:12px;
 
             <div class="qr_btn_container"><button>Показать QR<svg xmlns="http://www.w3.org/2000/svg" enable-background="new 0 0 24 24" viewBox="0 0 24 24"><path fill="white" d="M8,21H4c-0.6,0-1-0.4-1-1v-4c0-0.6-0.4-1-1-1s-1,0.4-1,1v4c0,1.7,1.3,3,3,3h4c0.6,0,1-0.4,1-1S8.6,21,8,21z M22,15c-0.6,0-1,0.4-1,1v4c0,0.6-0.4,1-1,1h-4c-0.6,0-1,0.4-1,1s0.4,1,1,1h4c1.7,0,3-1.3,3-3v-4C23,15.4,22.6,15,22,15z M20,1h-4c-0.6,0-1,0.4-1,1s0.4,1,1,1h4c0.6,0,1,0.4,1,1v4c0,0.6,0.4,1,1,1h0c0.6,0,1-0.4,1-1V4C23,2.3,21.7,1,20,1z M2,9L2,9c0.6,0,1-0.4,1-1V4c0-0.6,0.4-1,1-1h4c0.6,0,1-0.4,1-1S8.6,1,8,1H4C2.3,1,1,2.3,1,4v4C1,8.6,1.4,9,2,9z M10,5H6C5.4,5,5,5.4,5,6v4c0,0.6,0.4,1,1,1h4c0.6,0,1-0.4,1-1V6C11,5.4,10.6,5,10,5z M14,11h4c0.6,0,1-0.4,1-1V6c0-0.6-0.4-1-1-1h-4c-0.6,0-1,0.4-1,1v4C13,10.6,13.4,11,14,11z M10,13H6c-0.6,0-1,0.4-1,1v4c0,0.6,0.4,1,1,1h4c0.6,0,1-0.4,1-1v-4C11,13.4,10.6,13,10,13z M14,16L14,16c0.6,0,1-0.4,1-1c0.6,0,1-0.4,1-1s-0.4-1-1-1h-1c-0.6,0-1,0.4-1,1v1C13,15.6,13.4,16,14,16z M18,13c-0.6,0-1,0.4-1,1v3c-0.6,0-1,0.4-1,1s0.4,1,1,1h1c0.6,0,1-0.4,1-1v-4C19,13.4,18.6,13,18,13z M14,17c-0.6,0-1,0.4-1,1s0.4,1,1,1s1-0.4,1-1S14.6,17,14,17z"/></svg></button></div>
     <script src="/socket.io/socket.io.js"></script>
+<script src="//cdn.jsdelivr.net/npm/eruda"></script>
+<script>eruda.init();</script>
     <script>
         const socket = io('/room');
 function hasNumbers(string) {
